GNOME Bugzilla – Bug 697467
deinterlace: mode=interlaced doesn't force deinterlacing
Last modified: 2013-04-07 22:37:21 UTC
setting mode to 1 doesn't do anything
Created attachment 240868 [details] [review] Patch
Comment on attachment 240868 [details] [review] Patch > interlacing_mode = GST_VIDEO_INFO_INTERLACE_MODE (&frame->info); >+ if (self->mode == GST_DEINTERLACE_MODE_INTERLACED) >+ interlacing_mode = GST_VIDEO_INTERLACE_MODE_INTERLEAVED; Shouldn't we only override this if the input video is signalled as not interlaced at all?
right, i guess this shouldn't be done for mixed mode
I would expect that "Force deinterlacing" would force deinterlacing in all cases.
I was confused about mixed mode, sorry. Pushed: commit 67c22196871b064182273b44b246d48711297eeb Author: Matej Knopp <matej.knopp@gmail.com> Date: Sun Apr 7 01:47:56 2013 +0200 deinterlace: force deinterlacing in "interlaced" mode https://bugzilla.gnome.org/show_bug.cgi?id=697467