deinterlace: force deinterlacing in "interlaced" mode

https://bugzilla.gnome.org/show_bug.cgi?id=697467